# family

./: .env  Cargo.toml  Dioxus.toml
migrations/: 01_initial.sql  02_create_produkt.sql  init_01.sql
src/: db.rs  main.rs
src/backend/: benutzer.rs  db.rs  mod.rs
src/backend/models/: benutzer.rs  mod.rs  produkt.rs
src/backend/repository/: benutzer_repo.rs  mod.rs  produkt_repo.rs
src/backend/server_functions/: benutzer_fns.rs  mod.rs  produkt_fns.rs
src/components/: mod.rs
src/components/geruest/: app_layout.rs  header.rs  mod.rs  sideboard.rs
src/components/home/: home.rs  login.rs  register.rs  registrieren.rs
src/components/produkt/: create.rs  delete.rs  einkaufsliste.rs  mod.rs
