[package]
name = "family"
version = "0.1.0"
authors = ["Hatem Ben Belgacem <hatem.benbelgacem@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid"], optional = true }
bcrypt = { version = "0.15", optional = true }
uuid = { version = "1.1", features = ["serde", "v4"], optional = true }
tokio = { version = "1.0", features = ["sync", "rt", "macros"], optional = true }

[features]
default = ["server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

# ==========================================
# 3. Server-Feature
# Wird von "dx serve" / "dx build" beim Backend-Bau automatisch aktiviert
# ==========================================
server = [
    "dioxus/server",
    "dep:sqlx",
    "dep:bcrypt",
    "dep:uuid",
    "dep:tokio"
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
