[package]
name = "family"
version = "0.1.0"
authors = ["Hatem Ben Belgacem <hatem.benbelgacem@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version ="0.4.43", features = ["serde"]}
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version="0.8.3", features = [ "postgres", "runtime-tokio", "chrono", "uuid" ], optional = true}
wasm-bindgen = "=0.2.108"
tokio = { version = "1.48.0", features = ["full"], optional = true }
num-format = "0.4"
dotenv = "0.15"
bcrypt = { version = "0.15", optional = true }
uuid = { version = "1.10", features = ["serde", "v4"], optional = true }
dotenvy = "0.15.7"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "sqlx", "dep:tokio", "dep:bcrypt", "dep:uuid"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
